--- a/style_exercicios.css
+++ b/style_exercicios.css
@@ -10,8 +10,8 @@ body {
 
 h1 { 
     font-family: 'Bungee Inline';
-    font-size: 3rem;
-    margin: 2em 0;
+    font-size: 5vh;
+    margin: 3vw 3vw 3vw 0;
 
 }
 
@@ -25,6 +25,8 @@ h1 {
 .col-itens { 
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #container { 
@@ -36,8 +38,8 @@ h1 {
     border-radius: 30px;
     width: 85.28vw;
     height: 69.43vh;
-    gap: 7.74vh;
-    box-shadow: 4px 4px 80px 0px rgba(0, 0, 0, 0.25);
+    gap: 8.74vh;
+    box-shadow: 4px 4px 50px 0px rgba(0, 0, 0, 0.25);
 
 }
 
@@ -65,28 +67,29 @@ h1 {
 #content { 
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 #pergunta { 
     font-family: 'Blinker';
-    font-size: 2.5rem;
+    font-size: 4.5vh;
     font-weight: 400;
-    margin-left: 4rem;
-    margin-right: 4rem;
+    margin-left: 4vw;
+    margin-right: 4vw;
 }
 
 .alternativas { 
     font-family: 'Blinker';
-    font-size: 2rem;
+    font-size: 4vh;
     font-weight: 400;
     margin: 0;
-    margin-left: 40px;
+    margin-left: 2vw;
 }
 
 .bolinha_alternativa { 
     display: flex;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 4vh;
     font-family: 'Blinker';
     background-color: #F3F3F3;
     border-radius: 100vh;
@@ -106,7 +109,6 @@ h1 {
 }
 
 #barra-progresso{ 
-    font-size: 7rem;
     width: 24.86vw;
     height: 5.66vh;
     background-color: white;
@@ -148,4 +150,77 @@ h1 {
 .errada {
     background-color: red;
     color: white;
+}
+
+.grafico-desempenho {
+    /* Converta estas medidas para VW/VH se necessário */
+    width: 150px; 
+    height: 150px;
+    border-radius: 50%;
+    display: flex; 
+    place-items: center;
+    position: relative;
+    
+    /* Cria o "buraco" do donut com uma máscara (compatível com a maioria dos navegadores modernos) */
+    -webkit-mask: radial-gradient(farthest-side, transparent 70%, #fff 0);
+            mask: radial-gradient(farthest-side, transparent 70%, #fff 0);
+}
+
+.valor-central {
+  position: fixed;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333; /* cor do texto */
+}
+
+.grafico{ 
+    gap: 10vw;
+}
+
+#email-container{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
+    font-family: 'Blinker';
+    font-size: 2vh;
+    font-weight: 400;
+}
+
+#email-input{ 
+    border-radius: 30em;
+    border: none;
+    background-color: #F3F3F3;
+    color: black;
+    font-family: 'Blinker';
+    text-align: center;
+    width: 26.74vw;
+    height: 6.54vh;
+    font-size: 3vh;
+    font-family: 'Blinker';
+    font-weight: 400;
+    cursor: pointer;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+}
+
+#btnInicio{
+    border-radius: 30em;
+    border: none;
+    background-color: #70A1E2;
+    color: black;
+    font-family: 'Blinker';
+    width: 36.74vw;
+    height: 6.54vh;
+    font-size: 3vh;
+    font-family: 'Blinker';
+    font-weight: 700;
+    cursor: pointer;
+}
+
+#btnInicio:hover {
+  background-color: #5179ad;
+  border-radius: 1.74vw;
+
 }
